tests/baselines/reference/funduleUsedAcrossFileBoundary.errors.txt
funduleUsedAcrossFileBoundary_file1.ts(2,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== funduleUsedAcrossFileBoundary_file1.ts (1 errors) ====
    declare function Q<T>(value: T): string;
    declare module Q {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface Promise<T> {
            foo: string;
        }
        export function defer<T>(): string;
    }
    
==== funduleUsedAcrossFileBoundary_file2.ts (0 errors) ====
    function promiseWithCancellation<T>(promise: Q.Promise<T>) {
        var deferred = Q.defer<T>(); // used to be an error
    }